Adding Author Archive Page, and other small CSS changes

--- a/sass/theme/pages/_blogs.scss
+++ b/sass/theme/pages/_blogs.scss
@@ -1,4 +1,4 @@
-.post-template-default #menu_area, .blog #menu_area, .page-template-default #menu_area, .error404 #menu_area, .category #menu_area, .page-template-page-thanks #menu_area {
+.post-template-default #menu_area, .blog #menu_area, .page-template-default #menu_area, .error404 #menu_area, .category #menu_area, .page-template-page-thanks #menu_area, .author #menu_area {
     background-color: #4c4c4c;
 }
 h1 {
