testimonials star area fix

--- a/sass/theme/pages/_testimonials.scss
+++ b/sass/theme/pages/_testimonials.scss
@@ -15,9 +15,11 @@
         margin-bottom: 30px;
 
         .star-area {
-            width: 110px;
-            margin: 0 auto;
+            text-align: center;
             margin-bottom: 30px;
+            i {
+                color: $yellow;
+            }
         }
     }
 }
