--- a/sass/theme/components/_content.scss
+++ b/sass/theme/components/_content.scss
@@ -540,3 +540,109 @@ body {
         }
     }
 }
+
+
+.page-id-4156 #services-area .services-in {
+    max-width: 100%;
+}
+.page-id-4156 #services-area .col-md-6 {
+    flex: 0 0 33%;
+    width: 33%;
+}
+#kerb-form-container {
+position: fixed;
+top: 0; left: 0;
+width: 100%;
+height: 100vh;
+background-color: rgba(0,0,0,0.6);
+display: flex;
+justify-content: center;
+align-items: center;
+z-index: 10000;
+}
+#kerb-form {
+width: 640px;
+height: 612px;
+}
+
+#kerb-form-wrapper {
+position: relative;
+}
+
+#close-kerb-form {
+position: absolute;
+right: 15px;
+top: -3px;
+font-size: 32px;
+color: #000;
+cursor: pointer;
+}
+
+@media (max-width: 640px) {
+#kerb-form-container {
+  align-items: flex-start;
+}
+#kerb-form {
+  width: 100%!important;
+  height: 85vh!important;
+}
+#kerb-form-wrapper {
+  width: 100%;
+}
+  .page-id-4156 #services-area .col-md-6 {
+    flex: 0 0 100%;
+    width: 100%;
+}
+}
+
+#kerb-form-btn {
+width: 250px;
+padding: 0;
+margin: 0 auto;
+border-radius: 4px;
+}
+
+
+.steps {
+    margin-top: 80px;
+    text-align: center;
+    .step-card {
+        text-align: center;
+        position: relative;
+        span {
+            width: 70px;
+            height: 70px;
+            background:$white;
+            color:$black;
+            font-family: $lato-black;
+            font-size: 22px;
+            position: absolute;
+            top:0px;
+            left:60px;
+            line-height: 70px;
+            border-radius: 100%;
+            @include media-breakpoint-only(md) {
+                left:15px;
+            }
+        }
+        img {
+            border-radius: 100%;
+            width: 250px;
+            padding:5px;
+            border:1px solid $yellow;
+        }
+        .card-text {
+            padding-top: 20px;
+            color:$white;
+        }
+        p {
+            color:$white;
+            text-transform: uppercase;
+            font-size: 17px;
+            font-family: $lato-semi;
+            @include media-breakpoint-only(md) {
+                font-size: 15px;
+            }
+        }
+    }
+}
