--- a/sass/theme/pages/_blogs.scss
+++ b/sass/theme/pages/_blogs.scss
@@ -12,7 +12,7 @@ h1 {
         margin-top: 150px;
     }
 }
-#blog-listing {
+#blog-listing, .similar-posts {
     padding-top: 50px;
     padding-bottom: 120px;
 
@@ -348,6 +348,37 @@ h1 {
                         }
                     }
                 }
+            }
+        }
+    }
+}
+.similar-posts {
+    &.first-child-box {
+        padding-bottom: 0;
+    }
+    h2 {
+        margin-bottom: 30px;
+        text-align: center;
+        color: #404040;
+    }
+    h3 {
+        font-size: 1.5rem !important;
+        a {
+            color: #404040;
+        }
+    }
+    .blog-box {
+        display: block !important;
+        .blog-photo {
+            width: 100% !important;
+            margin-bottom: 10px;
+            height: 230px;
+        }
+        .blog-content {
+            width: 100% !important;
+            padding: 0 !important;
+            .blog-date {
+                margin: 10px 0;
             }
         }
     }
