--- a/sass/theme/pages/_blogs.scss
+++ b/sass/theme/pages/_blogs.scss
@@ -489,6 +489,24 @@ h1 {
         }
     }
 
+    .single-table {
+        @include media-breakpoint-down(sm) {
+            display: block;
+            overflow-x: auto;
+            white-space: nowrap;
+        }
+        th {
+            border: 1px solid;
+            background: $yellow;
+            color: #fff;
+            padding: 3px 10px;
+        }
+        td {
+            border: 1px solid;
+            padding: 3px 10px;
+        }
+    }
+
     .photo-caption {
         padding: 10px;
         text-align: center;
@@ -719,6 +737,74 @@ h1 {
     }
 }
 
+// Featured Article 
+
+.featured-article-box {
+    .blog-box {
+        background: $black;
+        border-radius: 12px;
+        padding: 40px;
+        margin-bottom: 30px;
+        @include media-breakpoint-down(sm) {
+            padding: 20px;
+        }
+        .blog-photo {
+            display: inline-block;
+            width: 30% !important;
+            vertical-align: middle;
+            margin: 0 !important;
+            margin-right: 30px;
+            @include media-breakpoint-down(sm) {
+                width: 100% !important;
+                margin-bottom: 20px !important;
+            }
+            img {
+                max-width: 100% !important; 
+            }
+        }
+        .blog-content {
+            display: inline-block;
+            width: 60% !important;
+            vertical-align: middle;
+            margin-left: 30px;
+            padding-top: 0 !important;
+            @include media-breakpoint-down(sm) {
+                margin-left: 0;
+                width: 100% !important;
+                text-align: center;
+            }
+            h3 {
+                margin-top: 0 !important;
+                font-size: 1.8em !important;
+                margin-bottom: 25px;
+                @include media-breakpoint-down(sm) {
+                    text-align: center;
+                    margin-bottom: 10px !important;
+                    font-size: 1.2em !important;
+                }
+                a {
+                    color: #fff;
+                }
+            }
+            a.btn-cta {
+                @include yellow-btn;
+                height: 60px;
+                line-height: 60px;
+                width: 280px;
+                @include media-breakpoint-down(md) {
+                    height: 52px;
+                    line-height: 52px;
+                    width: 220px;
+                }
+                &:hover {
+                    background:$black;
+                    color:$white;
+                }
+            }
+        }
+    }
+}
+
 #blog-page.services-ctp,
 #blog-page.cities-ctp {
     margin-top:0;
@@ -935,10 +1021,10 @@ h1 {
     background: $black;
     padding:30px;
     text-align: center;
+    border-radius: 12px;
     span.title {
         display: block;
         color:$white;
-        margin-right: 40px;
         font-size: 42px;
         line-height: 1.2;
         margin-bottom: 25px;
@@ -953,5 +1039,8 @@ h1 {
         @include yellow-btn;
         width: 280px;
         margin:0px auto;
+        @include media-breakpoint-down(md) {
+            width: 100%;
+        }
     }
 }
