--- a/sass/theme/pages/_blogs.scss
+++ b/sass/theme/pages/_blogs.scss
@@ -1040,3 +1040,90 @@ h1 {
         }
     }
 }
+
+#post-nav {
+    padding-top: 30px;
+    margin-top: 20px;
+    border-top:1px solid #ddd;
+    .post-wrapper {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        .item {
+            width: 20%;
+            margin-bottom: 30px;
+            @include media-breakpoint-down(md) {
+                width: 50%;
+            }    
+            a {
+                display: block;
+                width: 100%;
+                height: 100%;
+                border-radius: 12px;
+                &.active {
+                    background:#3c8741;
+                    img {
+                        filter: brightness(0) invert(1);
+                    }
+                    span {
+                        color:$white!important;
+                    }
+                }
+            }        
+            .nav-col {
+                text-align: center;
+                height: 100%;
+                &:hover {
+                    span {
+                        color:$orange;
+                    }
+                    .icon {
+/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ff8925+0,ffb10e+100 */
+background: #ff8925; /* Old browsers */
+background: -moz-linear-gradient(top,  #ff8925 0%, #ffb10e 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #ff8925 0%,#ffb10e 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #ff8925 0%,#ffb10e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff8925', endColorstr='#ffb10e',GradientType=0 ); /* IE6-9 */
+
+                    }
+                }
+                .icon {
+                    margin:0px auto;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 16px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    position: relative;
+/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffb10e+0,ff8925+100 */
+background: #ffb10e; /* Old browsers */
+background: -moz-linear-gradient(top,  #ffb10e 0%, #ff8925 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #ffb10e 0%,#ff8925 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #ffb10e 0%,#ff8925 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb10e', endColorstr='#ff8925',GradientType=0 ); /* IE6-9 */
+                    border:4px solid #ff9021;
+                    margin-bottom: 20px;
+                    img {
+                        @include centre(both);
+                        filter: brightness(0) invert(1);
+                        width: 60px;
+                    }                
+                }
+                span {
+                    display: block;
+                    font-family: $lato-bold;
+                    font-size: 13px;
+                    line-height: 1.3;
+                    color: #404040;
+                    margin-bottom: 10px;
+                    text-transform: uppercase;
+                    @include animate-fade;
+                    @include media-breakpoint-down(md) {
+                        font-size: 1em;
+                    }                    
+                }
+            }
+        }        
+    }
+}
