--- a/src/sass/theme/pages/_blogs.scss
+++ b/src/sass/theme/pages/_blogs.scss
@@ -473,6 +473,7 @@ h1 {
         em {
             font-style: normal;
             font-family: $lato-italic;
+            font-weight: bold !important;
         }
     }
 
