--- a/src/sass/theme/pages/_blogs.scss
+++ b/src/sass/theme/pages/_blogs.scss
@@ -458,6 +458,7 @@ h1 {
         strong {
             font-weight: normal;
             font-family: $lato-bold;
+            font-weight: bold !important;
         }
 
         a {
