--- a/src/sass/theme/components/_header.scss
+++ b/src/sass/theme/components/_header.scss
@@ -313,3 +313,32 @@
         }
     }
 }
+
+// mobile
+#mobile-menu--btn {
+    @include centre(y);
+    width: 35px;
+    right: 0px;
+    display: none;
+    @include bp(md-down) {
+        display: block;
+    }
+    a {
+        display: block;
+        width: 100%;
+        span {
+            height: 3px;
+            border-radius:6px;
+            background-color:$yellow;
+            width: 100%;
+            display: block;
+            float: right;
+            @include animate-fade;
+            margin-top: 3px;
+            margin-bottom: 3px;
+        }	
+    }
+    .clearfix {
+        clear: both;
+    }       
+}
