--- a/src/sass/theme/components/_header.scss
+++ b/src/sass/theme/components/_header.scss
@@ -221,7 +221,7 @@
             margin-bottom: 18px;
         }
         h2 {
-            font-family: $lato-light;
+            font-family: $font-main;
             letter-spacing: 0px;
             font-size: 1.750em;
             line-height: 1.2;
