--- a/src/sass/theme/helpers/_typography.scss
+++ b/src/sass/theme/helpers/_typography.scss
@@ -2,8 +2,7 @@
 
 @font-face {
     font-family: 'Lato Black';
-    src: url('../fonts/Lato-Black.woff2') format('woff2'),
-        url('../fonts/Lato-Black.woff') format('woff');
+    src: url('../fonts/Lato-Black.woff2') format('woff2');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
@@ -11,8 +10,7 @@
 
 @font-face {
     font-family: 'Lato Bold';
-    src: url('../fonts/Lato-Bold.woff2') format('woff2'),
-        url('../fonts/Lato-Bold.woff') format('woff');
+    src: url('../fonts/Lato-Bold.woff2') format('woff2');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -20,8 +18,7 @@
 
 @font-face {
     font-family: 'Lato Regular';
-    src: url('../fonts/Lato-Regular.woff2') format('woff2'),
-        url('../fonts/Lato-Regular.woff') format('woff');
+    src: url('../fonts/Lato-Regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -29,8 +26,7 @@
 
 @font-face {
     font-family: 'Lato Semibold';
-    src: url('../fonts/Lato-Semibold.woff2') format('woff2'),
-        url('../fonts/Lato-Semibold.woff') format('woff');
+    src: url('../fonts/Lato-Semibold.woff2') format('woff2');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -38,31 +34,17 @@
 
 @font-face {
     font-family: 'Lato Italic';
-    src: url('../fonts/Lato-Italic.woff2') format('woff2'),
-        url('../fonts/Lato-Italic.woff') format('woff');
+    src: url('../fonts/Lato-Italic.woff2') format('woff2');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
 }
-
-@font-face {
-    font-family: 'Lato Light';
-    src: url('../fonts/Lato-Light.woff2') format('woff2'),
-        url('../fonts/Lato-Light.woff') format('woff');
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
-}
-
-
-
 
 $lato-bold: 'Lato Bold';
 $lato-semi: 'Lato Semibold';
 $lato-reg: 'Lato Regular';
 $lato-black: 'Lato Black';
 $lato-italic: 'Lato Italic';
-$lato-light: 'Lato Light';
 
 $font-main: 'Lato Regular';
 $font-heading: 'Lato Bold';
