--- a/src/sass/theme/pages/_404.scss
+++ b/src/sass/theme/pages/_404.scss
@@ -18,7 +18,7 @@
     }
 
     h1 {
-        font-family: $lato-light;
+        font-family: $font-main;
         font-size: 220px;
         line-height: 100%;
         display: block;
