--- a/src/sass/theme/components/_content.scss
+++ b/src/sass/theme/components/_content.scss
@@ -241,6 +241,7 @@ body {
     font-family: $lato-reg;
     bottom: 0;
     padding: 0px 30px;
+    display: none;
     @include bp(sm-down) {
         display: none;
     }
@@ -251,6 +252,7 @@ body {
         animation-duration: 1s;
         -webkit-animation-fill-mode: both;
         animation-fill-mode: both;
+        display: block!important;
     }
     &.slide-down {
         -webkit-animation-name: slideOutDown;
@@ -259,6 +261,7 @@ body {
         animation-duration: 1s;
         -webkit-animation-fill-mode: both;
         animation-fill-mode: both;
+        opacity: 0;
     }
     &-in {
         padding: 15px 30px;
