--- a/src/sass/theme/pages/_about.scss
+++ b/src/sass/theme/pages/_about.scss
@@ -44,7 +44,8 @@
 
         em {
             font-style: normal;
-            font-family: $lato-italic;
+            font-family: $font-main;
+            font-style: italic;
         }
     }
 
@@ -70,7 +71,8 @@
 
             em {
                 font-style: normal;
-                font-family: $lato-italic;
+                font-family: $font-main;
+                font-style: italic;
             }
         }
     }
