--- a/src/sass/theme/pages/_city.scss
+++ b/src/sass/theme/pages/_city.scss
@@ -355,8 +355,8 @@
             }
         }
         em {
-            font-family: $lato-italic;
-            font-style: normal;
+            font-family: $font-main;
+            font-style: italic;
         }
         ul {
             text-align: left;
@@ -464,7 +464,8 @@
             p {
                 @include regular-text;
                 color: #555555;
-                font-family: $lato-italic;
+                font-family: $font-main;
+                font-style: italic;
                 margin-bottom: 0;
             }
             .review-logo {
