--- a/src/sass/theme/helpers/_typography.scss
+++ b/src/sass/theme/helpers/_typography.scss
@@ -24,17 +24,16 @@
     font-display: swap;
 }
 
-@font-face {
-    font-family: 'Lato Semibold';
-    src: url('../fonts/Lato-Semibold.woff2') format('woff2');
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
-}
-
+// @font-face {
+//     font-family: 'Lato Semibold';
+//     src: url('../fonts/Lato-Semibold.woff2') format('woff2');
+//     font-weight: 600;
+//     font-style: normal;
+//     font-display: swap;
+// }
 
 $lato-bold: 'Lato Bold';
-$lato-semi: 'Lato Semibold';
+$lato-semi: 'Lato Bold';
 $lato-reg: 'Lato Regular';
 $lato-black: 'Lato Black';
 
