--- a/src/sass/theme/helpers/_mixins.scss
+++ b/src/sass/theme/helpers/_mixins.scss
@@ -440,7 +440,7 @@
     line-height: 1.66;
     margin-bottom: 20px;
     @include bp(md-down) {
-        font-size: 1.063em;
+        font-size: 18px;
     }
 }
 
