--- a/src/sass/theme/pages/_home.scss
+++ b/src/sass/theme/pages/_home.scss
@@ -11,14 +11,17 @@
         background: url('../img/bg/kerb-mobile-bg.webp');
         background-position: center;
         background-size: cover;
-        background-repeat: no-repeat;        
+        background-repeat: no-repeat;      
+        background: $black!important;
+        min-height: auto;
+        padding-bottom: 50px;  
     }
     @media (max-width: 992px) {
         padding-top: 190px;
     }
 
     @media (max-width: 767px) {
-        padding-top: 130px;
+        padding-top: 100px;
     }
 
     h2 {
