--- a/src/sass/theme/components/_header.scss
+++ b/src/sass/theme/components/_header.scss
@@ -119,28 +119,18 @@
         .heading-title {
             @include page-title;
             display: block;
-
-            @include bp(desktop) {
-            }
-
-            @include bp(lg) {
-            }
-
-            @include bp(md) {
-            }
-
-            @include bp(sm-down) {
-            }
         }
 
         p {
+            font-family: Arial;
+            font-weight: bold;            
             &:first-of-type {
-                font-family: $lato-reg;
                 font-size: 1.750em;
                 line-height: 1.3;
                 margin-bottom: 38px;
                 color: $white;
-
+                font-family: Arial;
+                font-weight: bold;
                 @include bp(desktop) {
                     font-size: 1.7em;
                 }
@@ -150,7 +140,7 @@
                 }
 
                 @include bp(md-down) {
-                    font-size: 1.5em;
+                    font-size: 18px;
                 }
 
                 @include bp(sm-down) {
@@ -160,7 +150,8 @@
             }
 
             &:last-of-type {
-                font-family: $lato-semi;
+                font-family: Arial;
+                font-weight: bold;
                 font-size: 1em;
                 line-height: 1.3;
                 width: 68%;
@@ -177,7 +168,7 @@
                 }
 
                 @include bp(md-down) {
-                    font-size: 1.2em;
+                    font-size: 18px;
                     width: 100%;
                 }
 
